--- a/index.html
+++ b/index.html
@@ -11,9 +11,12 @@
 			<button class="btn btn-default" ng-click="add()">提交</button>
 		</span>
 	</div>
-	<h4>任务列表</h4>
+	<h4 ng-if="tasks.length>0">任务列表</h4>
 	<ul class="list-group">
-		<li ng-repeat="item in tasks track by $index" class="list-group-item">{{item}}</li>
+		<li ng-repeat="item in tasks track by $index" class="list-group-item">
+			{{item}}
+			<a ng-click="tasks.splice($index,1)">删除</a>
+		</li>		
 	</ul>
 </body>
 <script src="js/angular.min.js"></script>
